--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - 3306:3306
     environment:
       MYSQL_ROOT_PASSWORD: javeriana
+      MYSQL_HOST: '0.0.0.0'
+      MYSQL_ROOT_HOST: '%'
 
   adminer:
     image: adminer
